backend/api/tests/integration/jig/snapshots/integration__jig__draft__get_draft-2.snap
---
source: tests/integration/jig/draft.rs
expression: body

---
{
  "jig": {
    "id": "[id]",
    "display_name": "",
    "modules": [],
    "age_ranges": [],
    "affiliations": [],
    "goals": [],
    "creator_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "author_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "language": "en",
    "categories": [],
    "publish_at": "9999-03-04T00:46:26.134651Z",
    "additional_resources": [],
    "description": "test description",
    "last_edited": "[time_stamp]",
    "is_public": false,
    "default_player_settings": {
      "direction": "ltr",
      "display_score": false,
      "track_assessments": false,
      "drag_assist": false
    },
    "theme": "Blank",
    "audio_background": null,
    "audio_effects": {
      "feedback_positive": [],
      "feedback_negative": []
    }
  }
}
