backend/api/tests/integration/jig/snapshots/integration__jig__draft__publish_draft-2.snap
---
source: tests/integration/jig/draft.rs
expression: body

---
{
  "jig": {
    "id": "[id]",
    "display_name": "",
    "modules": [],
    "age_ranges": [],
    "affiliations": [],
    "goals": [],
    "creator_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "author_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "language": "en",
    "categories": [],
    "publish_at": null,
    "additional_resources": [],
    "description": "updated draft description",
    "last_edited": "[time_stamp]",
    "is_public": true,
    "direction": "LeftToRight",
    "display_score": false,
    "theme": "Blank"
  }
}
