backend/api/tests/integration/jig/snapshots/integration__jig__draft__publish_draft.snap
---
source: tests/integration/jig/draft.rs
expression: body

---
{
  "jig": {
    "id": "[id]",
    "displayName": "",
    "modules": [],
    "ageRanges": [],
    "affiliations": [],
    "goals": [],
    "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
    "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
    "authorName": "Bobby Tables",
    "language": "en",
    "categories": [],
    "publishAt": "9999-03-04T00:46:26.134651Z",
    "isDraft": false,
    "privacyLevel": "unlisted",
    "additionalResources": [],
    "description": "updated draft description",
    "lastEdited": "2021-09-13T21:47:14.861375Z",
    "defaultPlayerSettings": {
      "direction": "ltr",
      "displayScore": false,
      "trackAssessments": false,
      "dragAssist": false
    },
    "theme": "Blank",
    "audioBackground": null,
    "audioEffects": {
      "feedbackPositive": [],
      "feedbackNegative": []
    }
  }
}
